logs/hub.log
  File "/Users/thomasharvey/fantasycpu/watson_aristotle_hub.py", line 35
    mt = os.path.getmtime(WEEKLY_JSON) if os.path.exists(WEEKLY_JSON) else 
                                                                           ^
SyntaxError: invalid syntax
 * Serving Flask app 'watson_aristotle_hub'
 * Debug mode: off
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on http://127.0.0.1:5205
[33mPress CTRL+C to quit[0m
127.0.0.1 - - [31/Aug/2025 20:42:49] "GET /health HTTP/1.1" 200 -
127.0.0.1 - - [31/Aug/2025 20:42:49] "GET /weekly HTTP/1.1" 200 -
